# sbilifeco-product-analyst

./: .gitignore  docker-compose.yml
cp/http-clients/id-name-repo/: pyproject.toml
cp/http-clients/id-name-repo/src/sbilifeco/cp/id_name_repo/: http_client.py
cp/http-clients/id-name-repo/test/: id_name_repo_test.py
cp/http-clients/ingest-flow/: pyproject.toml
cp/http-clients/ingest-flow/src/sbilifeco/cp/product_analyst/ingest_flow/: http_client.py
cp/http-clients/ingest-flow/test/: http_client_test.py
cp/http-clients/material-reader/: pyproject.toml
cp/http-clients/material-reader/src/sbilifeco/cp/material_reader/: http_client.py
cp/http-clients/material-reader/test/: http_client_test.py
cp/http-clients/query-flow/: pyproject.toml
cp/http-clients/query-flow/src/sbilifeco/cp/product_analyst/query_flow/: http_client.py
cp/http-clients/query-flow/test/: http_client_test.py
cp/http-clients/vector-repo/: pyproject.toml
cp/http-clients/vector-repo/src/sbilifeco/cp/vector_repo/: http_client.py
cp/http-clients/vector-repo/test/: http_client_test.py
cp/http-clients/vectoriser/: pyproject.toml
cp/http-clients/vectoriser/src/sbilifeco/cp/vectoriser/: http_client.py
cp/http-clients/vectoriser/test/: envvars.py  http_client_test.py
cp/http-servers/id-name-repo/: pyproject.toml
cp/http-servers/id-name-repo/src/sbilifeco/cp/id_name_repo/: http_server.py
cp/http-servers/ingest-flow/: pyproject.toml
cp/http-servers/ingest-flow/src/sbilifeco/cp/product_analyst/ingest_flow/: http_server.py
cp/http-servers/material-reader/: pyproject.toml
cp/http-servers/material-reader/src/sbilifeco/cp/material_reader/: http_server.py
cp/http-servers/query-flow/: pyproject.toml
cp/http-servers/query-flow/src/sbilifeco/cp/product_analyst/query_flow/: http_server.py
cp/http-servers/vector-repo/: pyproject.toml
cp/http-servers/vector-repo/src/sbilifeco/cp/vector_repo/: http_server.py
cp/http-servers/vectoriser/: pyproject.toml
cp/http-servers/vectoriser/src/sbilifeco/cp/vectoriser/: http_server.py
cp/paths/id-name-repo/: pyproject.toml
cp/paths/id-name-repo/src/sbilifeco/cp/id_name_repo/: paths.py
cp/paths/ingest-flow/: pyproject.toml
cp/paths/ingest-flow/src/sbilifeco/cp/product_analyst/ingest_flow/: paths.py
cp/paths/material-reader/: pyproject.toml
cp/paths/material-reader/src/sbilifeco/cp/material_reader/: paths.py
cp/paths/query-flow/: pyproject.toml
cp/paths/query-flow/src/sbilifeco/cp/product_analyst/query-flow/: paths.py
cp/paths/query-flow/src/sbilifeco/cp/product_analyst/query_flow/: paths.py
cp/paths/vector-repo/: pyproject.toml
cp/paths/vector-repo/src/sbilifeco/cp/vector_repo/: paths.py
cp/paths/vectoriser/: pyproject.toml
cp/paths/vectoriser/src/sbilifeco/cp/paths/: vectoriser.py
cp/paths/vectoriser/src/sbilifeco/cp/vectoriser/: paths.py
domain/boundaries/id-name-repo/: pyproject.toml
domain/boundaries/id-name-repo/src/sbilifeco/boundaries/: id_name_repo.py
domain/boundaries/ingest-flow/: pyproject.toml
domain/boundaries/ingest-flow/src/sbilifeco/boundaries/product_analyst/: ingest_flow.py
domain/boundaries/material-reader/: pyproject.toml
domain/boundaries/material-reader/src/sbilifeco/boundaries/: material_reader.py
domain/boundaries/material-reader/src/sbilifeco/boundaries/product_analyst/: material_reader.py
domain/boundaries/query-flow/: pyproject.toml
domain/boundaries/query-flow/src/sbilifeco/boundaries/product_analyst/: query_flow.py
domain/boundaries/query-flow/src/sbilifeco/flows/product_analyst/: query_flow.py
domain/boundaries/vector-repo/: pyproject.toml
domain/boundaries/vector-repo/src/sbilifeco/boundaries/: vector_repo.py
domain/boundaries/vector-repo/src/sbilifeco/boundaries/product_analyst/: vector_repo.py
domain/boundaries/vectoriser/: pyproject.toml
domain/boundaries/vectoriser/src/sbilifeco/boundaries/: vectoriser.py
domain/boundaries/vectoriser/src/sbilifeco/boundaries/product_analyst/: vectoriser.py
domain/models/: pyproject.toml
domain/models/vectorisation/: pyproject.toml
domain/models/vectorisation/src/sbilifeco/models/: vectorisation.py
domain/use-cases/ingest-flow/: pyproject.toml
domain/use-cases/ingest-flow/src/sbilifeco/flows/product_analyst/: ingest_flow.py
domain/use-cases/ingest-flow/test/: ingest_flow_test.py
domain/use-cases/query-flow/: pyproject.toml
domain/use-cases/query-flow/src/sbilifeco/flows/product_analyst/: query_flow.py
domain/use-cases/query-flow/test/: query_flow_test.py
frontend/ingest-flow/: .gitignore  Dockerfile  package-lock.json  package.json  run-as-dev.sh  run.sh
frontend/ingest-flow/ingest-ui/: index.html
frontend/ingest-flow/ingest-ui/css/: sbilifeco.css
frontend/ingest-flow/ingest-ui/js/: ingest-page.d.ts  ingest-page.ts  ingest-page.ts.template
frontend/ingest-flow/test/: envvars.py  flow_test.py  ui_test.py
frontend/query-flow/: .gitignore  Dockerfile  package-lock.json  package.json  run-as-server.sh  run.sh
frontend/query-flow/product-query-ui/: index.html
frontend/query-flow/product-query-ui/js/: query-page.ts.template
frontend/query-flow/query-ui/: index.html
frontend/query-flow/query-ui/js/: query-page.ts.template
frontend/query-flow/test/: envvars.py  flow_test.py  ui_test.py
gateways/chromadb/: pyproject.toml
gateways/chromadb/src/sbilifeco/gateways/: file_system_chromadb.py
gateways/chromadb/test/: envvars.py  file_system_chromadb_test.py
gateways/pdf-readers/: pyproject.toml
gateways/pdf-readers/src/sbilifeco/gateways/readers/pdf/: docling_reader.py
gateways/pdf-readers/test/: docling_reader_test.py  envvars.py
gateways/qdrant/: pyproject.toml
gateways/qdrant/src/sbilifeco/gateways/: qdrant.py
gateways/qdrant/test/: envvars.py  gw_test.py
gateways/sqlite-entity-repo/: pyproject.toml
gateways/sqlite-entity-repo/src/sbilifeco/gateways/: sqlite_entity_repo.py
gateways/sqlite-entity-repo/test/: repo_test.py
