[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-chromadb"
version = "0.1.0"
description = "Gateway to ChromaDB for both performing embedding and storing embeddings"
dependencies = [
    "chromadb>=1.3.2",
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-boundary-vectoriser>=0.1.0",
    "sbilifeco-boundary-vector-repo>=0.1.0"
]