[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-pdf-readers"
version = "0.1.0"
description = "Collection of PDF readers that implement the material reader contract"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-boundary-material-reader>=0.1.0",
    "docling>=2.60.0",
    "uuid>=1.30",
]