[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-qdrant"
version = "0.1.0"
description = "Gateway to Qdrant vector database"
dependencies = [
    "uuid>=1.30",
    "fastembed>=0.7.4",
    "qdrant-client>=1.16.2",
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-models-vectorisation>=0.1.1",
    "sbilifeco-boundary-vector-repo>=0.1.1",
    "sbilifeco-boundary-vectoriser>=0.1.0",
]