[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-entity-repo-sqlite"
version = "0.1.0"
description = "Implementation of ID-name entity repo in SQLite"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-boundary-id-name-repo>=0.1.0"
]