[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-sqlite"
version = "0.1.0"
description = "Gateway to a SQLite database"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-boundary-id-name-repo>=0.1.0"
]