[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-client-id-name-repo"
version = "0.1.1"
description = "description"
dependencies = [
    "sbilifeco-models-base>=0.1.4",
    "sbilifeco-boundary-id-name-repo>=0.1.1",
    "sbilifeco-paths-id-name-repo>=0.1.1",
    "sbilifeco-cp-http-client>=0.1.2"
]