[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-productanalyst-http-client-ingest-flow"
version = "0.1.0"
description = "HTTP client to send requests to ingest flow"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-cp-http-client>=0.1.2",
    "sbilifeco-productanalyst-boundary-ingest-flow>=0.1.0",
    "sbilifeco-productanalyst-paths-ingest-flow>=0.1.0"
]