[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-client-material-reader"
version = "0.1.0"
description = "HTTP client to send requests to material reader"
dependencies = [
    "sbilifeco-cp-http-client>=0.1.2",
    "sbilifeco-boundary-material-reader>=0.1.0",
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-paths-material-reader>=0.1.0"
]