[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-productanalyst-http-client-query-flow"
version = "0.1.0"
description = "HTTP client to request from query flow"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-cp-http-client>=0.1.2",
    "sbilifeco-productanalyst-boundary-query-flow>=0.1.0",
    "sbilifeco-productanalyst-paths-query-flow>=0.1.0"
]