[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-client-vector-repo"
version = "0.1.1"
description = "HTTP client to send requests to vector database"
dependencies = [
    "sbilifeco-boundary-vector-repo>=0.1.1",
    "sbilifeco-cp-http-client>=0.1.2",
    "sbilifeco-paths-vector-repo>=0.1.0",
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-models-vectorisation>=0.1.1"
]