[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-server-id-name-repo"
version = "0.1.0"
description = "description"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-boundary-id-name-repo>=0.1.0",
    "sbilifeco-paths-id-name-repo>=0.1.0",
    "sbilifeco-cp-http-server>=0.1.1"
]