[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-productanalyst-http-server-query-flow"
version = "0.1.0"
description = "HTTP service over query flow"
dependencies = [
    "sbilifeco-cp-http-server>=0.1.1",
    "sbilifeco-productanalyst-paths-query-flow>=0.1.0",
    "sbilifeco-productanalyst-boundary-query-flow>=0.1.0",
    "sbilifeco-models-base>=0.1.3",
    "fastapi>=0.116.1"
]