[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-server-vectoriser"
version = "0.1.1"
description = "HTTP server to server requests for vectoriser"
dependencies = [
    "fastapi>=0.116.1",
    "sbilifeco-models-base>=0.1.4",
    "sbilifeco-boundary-vectoriser>=0.1.1",
    "sbilifeco-paths-vectoriser>=0.1.0",
    "sbilifeco-cp-http-server>=0.1.1"
]