[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-productanalyst-paths-ingest-flow"
version = "0.1.0"
description = "Paths for ingest flow microservice in product analyst application"
dependencies = [
    "sbilifeco-boundary-id-name-repo>=0.1.0",
]