[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-flow-product-analyst-ingest"
version = "0.1.0"
description = "Flow for ingestion of content"
dependencies = [
    "sbilifeco-models-base>=0.1.3"
]