[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-boundary-material-reader"
version = "0.2.0"
description = "Contract methods to read raw material and return it in logically divided chunks."
dependencies = [
    "sbilifeco-models-base>=0.1.4"
]