[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-flow-product-analyst-query"
version = "0.1.0"
description = "description"
dependencies = [
    "pydantic>=2.11.9",
    "sbilifeco-models-base>=0.1.3"
]