[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-boundary-vector-repo"
version = "0.1.1"
description = "Contract for building vector repositories to store and retrieve data and their vectors"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-models-vectorisation>=0.1.1"
]