[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "product-analyst-boundary-vectoriser"
version = "0.1.0"
description = "Contract for building a vectoriser / embedder"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
]