[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-models-vectorisation"
version = "0.1.1"
description = "Model classes for product analyst application"
dependencies = [
    "pydantic>=2.11.9"
]