[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-productanalyst-flow-ingest"
version = "0.1.0"
description = "description"
dependencies = [
    "uuid>=1.30",
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-models-vectorisation>=0.1.0",
    "sbilifeco-boundary-vectoriser>=0.1.0",
    "sbilifeco-boundary-vector-repo>=0.1.0",
    "sbilifeco-boundary-material-reader>=0.1.0",
    "sbilifeco-productanalyst-boundary-ingest-flow>=0.1.0",
]