[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-productanalyst-flow-query"
version = "0.1.2"
description = "Flow to query and fetch information from the appropriate document(s)"
dependencies = [
    "uuid>=1.30",
    "sbilifeco-models-base>=0.1.4",
    "sbilifeco-boundary-vectoriser>=0.1.1",
    "sbilifeco-boundary-vector-repo>=0.1.2",
    "sbilifeco-boundaries-llm>=0.2.0",
    "sbilifeco-productanalyst-boundary-query-flow>=0.1.1"
]